--- a/style.css
+++ b/style.css
@@ -64,3 +64,37 @@ body{
   
   .show {display: block;}
 
+  /* ---------------------- Card 2: Image Carousel ---------------------- */
+
+.card2{
+    height: 200px;
+}
+
+.slider {
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.prev, .next{
+    cursor: pointer;
+    width: auto;
+    padding: 16px;
+    color: white;
+    font-size: 58px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.slider .chevron{
+    filter: invert(100%);
+    height: 80px;
+    width: auto;
+}
+
+.slider img {
+    height: inherit;
+    width: auto;
+}
