--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body{
     background-color: var(--clr-background);
     display: flex;
     flex-wrap: wrap;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+
+.cardTitle {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.4rem;
+    color: var(--clr-white);
+    padding: 0px 10px 20px 10px;
 }
 
 .card{
@@ -23,6 +32,7 @@ body{
     border-radius: 10px;
     height: fit-content;
     width: fit-content;
+    text-align: center;
 }
 
 .dropbtn {
@@ -41,6 +51,7 @@ body{
   .dropdown {
     position: relative;
     display: inline-block;
+    
   }
   
   .dropdown-content {
@@ -66,12 +77,10 @@ body{
 
   /* ---------------------- Card 2: Image Carousel ---------------------- */
 
-.card2{
-    height: 200px;
-}
+
 
 .slider {
-    height: 200px;
+    height: 250px;
     width: 450px;
     display: flex;
     justify-content: center;
@@ -82,7 +91,7 @@ body{
     cursor: pointer;
     width: auto;
     padding: 16px;
-    color: white;
+    color: var(--clr-white);
     font-size: 58px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
@@ -96,6 +105,21 @@ body{
 }
 
 .slider img {
-    height: inherit;
-    width: inherit;
+    height: 100%;
+    width: 100%;
 }
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 22px 2px;
+    background-color: var(--clr-white);
+    border-radius: 50%;
+    display: inline-block;
+    /* transition: background-color 0.6s ease; */
+  }
+  
+  .active, .dot:hover {
+    background-color: var(--clr-primary);
+  }
